--- a/.env
+++ b/.env
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=103.163.111.41
 DB_PORT=3306
-DB_DATABASE=lp3ilib
-DB_USERNAME=root
-DB_PASSWORD=lp3itasik
+DB_DATABASE=lp3ilib_db
+DB_USERNAME=misil
+DB_PASSWORD=M1silV4
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
